# debug-allocator

./: CMakeLists.txt  readme.md
inc/: dalloc.h
src/: dalloc.c
tests/: tests.c
